<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_navegation"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.aihg.gestionatumenu.HomeFragment"
        android:label="@string/home_up"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_ingredientesFragment"
            app:destination="@id/ingredientesFragment" />
        <action
            android:id="@+id/action_homeFragment_to_menuFragment"
            app:destination="@id/menuFragment" />
        <action
            android:id="@+id/action_homeFragment_to_listaCompraFragment"
            app:destination="@id/listaCompraFragment" />
        <action
            android:id="@+id/action_homeFragment_to_planificadorFragment"
            app:destination="@id/planificadorFragment" />
        <action
            android:id="@+id/action_homeFragment_to_despensaFragment"
            app:destination="@id/despensaFragment" />
        <action
            android:id="@+id/action_homeFragment_to_recetasFragment"
            app:destination="@id/recetasFragment" />
    </fragment>
    <fragment
        android:id="@+id/ingredientesFragment"
        android:name="com.aihg.gestionatumenu.ui.ingredientes.IngredientesFragment"
        android:label="@string/ingredientes_upp"
        tools:layout="@layout/ingredientes__fragment" >
        <action
            android:id="@+id/action_ingredientesFragment_to_ingredienteDetailsFragment"
            app:destination="@id/ingredienteDetailsFragment" />
        <action
            android:id="@+id/action_ingredientesFragment_to_planificadorFragment"
            app:destination="@id/planificadorFragment" />
    </fragment>
    <fragment
        android:id="@+id/listaCompraFragment"
        android:name="com.aihg.gestionatumenu.ListaCompraFragment"
        android:label="@string/lista_de_la_compra_upp"
        tools:layout="@layout/listacompra__fragment" />
    <fragment
        android:id="@+id/recetasFragment"
        android:name="com.aihg.gestionatumenu.RecetasFragment"
        android:label="@string/recetas_up"
        tools:layout="@layout/recetas__fragment" />
    <fragment
        android:id="@+id/despensaFragment"
        android:name="com.aihg.gestionatumenu.DespensaFragment"
        android:label="@string/despensa_up"
        tools:layout="@layout/despensa__fragment" />
    <fragment
        android:id="@+id/planificadorFragment"
        android:name="com.aihg.gestionatumenu.PlanificadorFragment"
        android:label="@string/planificador_up"
        tools:layout="@layout/fragment_planificador" />
    <fragment
        android:id="@+id/menuFragment"
        android:name="com.aihg.gestionatumenu.MenuFragment"
        android:label="@string/menu_app"
        tools:layout="@layout/fragment_menu" />
    <fragment
        android:id="@+id/ingredienteDetailsFragment"
        android:name="com.aihg.gestionatumenu.IngredienteDetailsFragment"
        android:label="DETALLES INGREDIENTE"
        tools:layout="@layout/ingredientes__detail">
        <argument
            android:name="ingrediente"
            app:argType="com.aihg.gestionatumenu.db.entities.Ingrediente" />
        <action
            android:id="@+id/action_ingredienteDetailsFragment_to_ingredienteEditFragment"
            app:destination="@id/ingredienteEditFragment" />
    </fragment>
    <fragment
        android:id="@+id/ingredienteEditFragment"
        android:name="com.aihg.gestionatumenu.IngredienteEditFragment"
        android:label="EDITAR INGREDIENTE"
        tools:layout="@layout/ingredientes__edit" />
</navigation>