<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rosa_claro"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/b_lista_compra"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_marginBottom="2dp"
            android:backgroundTint="@color/black"
            android:text="@string/lista_de_la_compra_upp"
            app:layout_constraintBottom_toTopOf="@+id/b_recetas"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/b_Ingredientes"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/b_despensa"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_marginEnd="22dp"
            android:layout_marginBottom="41dp"
            android:backgroundTint="@color/black"
            android:text="@string/despensa_up"
            app:layout_constraintBottom_toTopOf="@+id/b_planificador"
            app:layout_constraintEnd_toStartOf="@+id/b_recetas"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b_Ingredientes"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/b_Ingredientes"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_marginEnd="22dp"
            android:layout_marginBottom="2dp"
            android:backgroundTint="@color/black"
            android:text="@string/ingredientes_upp"
            app:layout_constraintBottom_toTopOf="@+id/b_despensa"
            app:layout_constraintEnd_toStartOf="@+id/b_lista_compra"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/b_recetas"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_marginBottom="41dp"
            android:backgroundTint="@color/black"
            android:text="@string/recetas_up"
            app:layout_constraintBottom_toTopOf="@+id/b_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/b_despensa"
            app:layout_constraintTop_toBottomOf="@+id/b_lista_compra"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/b_planificador"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_marginEnd="22dp"
            android:backgroundTint="@color/black"
            android:text="@string/planificador_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/b_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b_despensa"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/b_menu"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/black"
            android:text="menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/b_planificador"
            app:layout_constraintTop_toBottomOf="@+id/b_recetas"
            app:strokeWidth="2dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>